--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Cabeçalho </h1>
-    
+    <form>
+        <label>nome</label>
+        <input type="text">
+        <br>
+        <label>idade</label>
+        <input type="text">
+        <br>
+        <label>email</label>
+        <input type="text">
+    </form>
     <footer>rodapé</footer>
     
 </body>
